[project]
authors = [{ name = "Amadej Kastelic", email = "amadejkastelic7@gmail.com" }]
requires-python = "<3.13,>=3.12"
dependencies = [
    "playwright<=1.50.1,>=1.49.0",
    "discord-py<3.0.0,>=2.5.2",
    "instaloader<5.0,>=4.14.1",
    "facebook-scraper<1.0.0,>=0.2.59",
    "python-magic==0.4.27",
    "redvid<3.0.0,>=2.0.5",
    "RedDownloader<5.0.0,>=4.3.0",
    "ffmpeg-python<1.0.0,>=0.2.0",
    "opencv-python<5.0.0.0,>=4.10.0.84",
    "asyncpraw<8.0.0,>=7.8.0",
    "twscrape>=0.17,<1.0",
    "lxml-html-clean<1.0.0,>=0.3.1",
    "Django<6.0.0,>=5.1.2",
    "djangorestframework<4.0.0,>=3.15.2",
    "djangorestframework-simplejwt<6.0.0,>=5.3.1",
    "django-structlog<9.0.0,>=8.1.0",
    "pymemcache<5.0.0,>=4.0.0",
    "discord-oauth2-py<2.0.0,>=1.2.1",
    "twitch-dl<3.0.0,>=2.9.2",
    "pydantic<3.0.0,>=2.7.1",
    "24ur-api[video]>=0.2.2,<1.0.0",
    "tiktokapipy[download]<1.0.0.0,>=0.2.4.post2",
    "psycopg[binary]<4.0.0,>=3.2.3",
    "aiograpi==0.0.3",
    "pytubefix>=8.12.1,<9.3.0",
    "markdownify<1.0.0,>=0.14.1",
    "pylibmagic<1.0.0,>=0.5.0",
    "atproto>=0.0.56,<1.0.0",
    "truthbrush>=0.1.9",
    "brotli>=1.1.0",
    "yt-dlp>=2025.6.9",
]
name = "discord-video-embed-bot"
description = "Discord bot that reads messages and embeds videos from various websited that don't support this"
version = "1.1.0"

[project.scripts]
manage = "django.core.management:execute_from_command_line"

[dependency-groups]
dev = [
    "black<25.0.0,>=24.10.0",
    "flake8<8.0.0,>=7.1.1",
    "flake8-import-order<1.0.0,>=0.18.2",
    "pylint<4.0.0,>=3.3.1",
    "pylint-django<3.0.0,>=2.6.1",
    "isort<6.0.0,>=5.13.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests", "tests.*"]
namespaces = false

[tool.uv]
default-groups = []
package = true

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
skip-string-normalization = true

[tool.ruff]
line-length = 120

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "double"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
force-single-line = true
case-sensitive = true
